# kafka-design-patterns-python

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: 00-project-rules.mdc
.github/: copilot-instructions.md
.github/workflows/: quality.yml
docs/: ai-agent-setup.md
documentations/: README.md  ai-agent-setup.md  appendix-kafka-production-configurations.md  chapter-01-what-is-kafka.md  chapter-02-core-concepts.md  chapter-03-producer-patterns.md  chapter-04-consumer-patterns.md  chapter-05-priority-architecture.md  chapter-06-resilience-patterns.md  chapter-07-production-decisions.md  kafka-quick-reference-cheatsheet.md
infrastructure/: .env.example  README.md  docker-compose.yml
infrastructure/scripts/: kafka_infrastructure.py
infrastructure/smoke_tests/: README.md  kafka_smoke_test.py
producers/callback_confirmed/: README.md  __init__.py  __main__.py  clients.py  constants.py  core.py  demo.py  types.py
producers/content_based_router/: README.md  __init__.py  __main__.py  clients.py  constants.py  core.py  demo.py  types.py
producers/dead_letter_queue/: README.md  __init__.py  __main__.py  clients.py  constants.py  core.py  demo.py  types.py
producers/fire_and_forget/: README.md  __init__.py  __main__.py  clients.py  constants.py  core.py  demo.py  types.py
test/producer/: test_content_based_router.py  test_dead_letter_queue_producer.py  test_fire_and_forget_producer.py
