[project]
name = "kafka-version-3"
version = "0.1.0"
description = "Enterprise Kafka producer and consumer design patterns."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Primary Kafka clients used across producer and consumer patterns.
    "confluent-kafka>=2.6.0",
    "kafka-python>=2.0.2",
    # Battle-tested resilience libraries used by the DLQ producer.
    "pybreaker>=1.4.0",
    "tenacity>=9.0.0",
    # Operational metrics in infrastructure/health scripts.
    "psutil>=5.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Phase 1: maintain strict checks where the codebase is actively maintained.
# Legacy-heavy paths can be tightened incrementally in follow-up cleanup PRs.
"consumers/**/*.py" = ["E402", "E722", "F401", "F541", "F841"]
"test/consumer/**/*.py" = ["E402", "F401", "F541", "F841"]
"producers/resilient/*.py" = ["F401", "F841"]
"producers/content_based_router/*.py" = ["F401"]
"producers/simple_producer.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
